<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.ChartsFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/tv_grafice"
        style="@style/navyText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/grafice"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@id/imageView_grafice"
        app:layout_constraintTop_toTopOf="parent"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
/>

    <Button
        android:id="@+id/btn_chart1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pie_chart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_chart2"

        />

    <Button
        android:id="@+id/btn_chart2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bar_chart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
/>

    <ImageView
        android:id="@+id/imageView_grafice"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:src="@drawable/ic_bar_chart_svg"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btn_chart1"
 />

</androidx.constraintlayout.widget.ConstraintLayout>