<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/navy"

    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView
        android:id="@+id/obiect_inventar_adapter_img"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/denumire"
        android:src="@drawable/ic_baseline_construction_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />
    <TextView
        android:id="@+id/denumire_obiect_de_inventar_adapter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/denumire"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:textStyle="italic|bold"
        app:layout_constraintStart_toEndOf="@+id/obiect_inventar_adapter_img"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/categorie_obiect_de_inventar_adapter"
        style="@style/TealText"

        />
    <TextView
        android:id="@+id/categorie_obiect_de_inventar_adapter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/categorie"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:textStyle="italic|bold"
        app:layout_constraintStart_toEndOf="@+id/denumire_obiect_de_inventar_adapter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/TealText"
        />
    <TextView
        android:id="@+id/data_adaugare_obiect_de_inventar_adapter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/data_adaugare"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:textStyle="italic|bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/obiect_inventar_adapter_img"
        app:layout_constraintStart_toStartOf="parent"
        android:textAlignment="center"
        style="@style/TealText"
        android:gravity="center_horizontal" />

    <TextView
        android:id="@+id/valoare_obiect_de_inventar_adapter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/valoare"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        style="@style/TealText"

        android:textStyle="italic|bold"
        app:layout_constraintTop_toBottomOf="@id/data_adaugare_obiect_de_inventar_adapter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/cantitate_obiect_de_inventar_adapter"


        />

    <TextView
        android:id="@+id/cantitate_obiect_de_inventar_adapter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="7dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="7dp"
        android:layout_marginRight="7dp"
        android:layout_marginBottom="7dp"
        android:text="@string/cantitate"
        android:textStyle="italic|bold"
        style="@style/TealText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/data_adaugare_obiect_de_inventar_adapter"
        app:layout_constraintTop_toBottomOf="@id/data_adaugare_obiect_de_inventar_adapter" />


</androidx.constraintlayout.widget.ConstraintLayout>