<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/griFain">
    <ImageView
        android:id="@+id/image_view_mijloc_fix_adapter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginLeft="7dp"
        android:layout_marginTop="7dp"
        android:contentDescription="@string/denumire"
        android:src="@drawable/ic_baseline_drive_eta_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />
    <TextView
        android:id="@+id/denumire_mijloc_fix_adapter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/denumire"
        android:layout_marginTop="7dp"
        android:layout_marginLeft="7dp"
        android:layout_marginEnd="7dp"
        android:layout_marginRight="7dp"
        android:textStyle="italic|bold"
        app:layout_constraintStart_toEndOf="@+id/image_view_mijloc_fix_adapter"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/valoare_mijloc_fix_adapter"
        style="@style/OrangeText"


        />


    <TextView
        android:id="@+id/valoare_mijloc_fix_adapter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/valoare"
        android:layout_marginTop="7dp"
        android:layout_marginLeft="7dp"
        android:layout_marginEnd="7dp"
        android:layout_marginRight="7dp"
        android:textStyle="italic|bold"
        app:layout_constraintStart_toEndOf="@+id/denumire_mijloc_fix_adapter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/OrangeText"

        />
    <TextView
        android:id="@+id/data_adaugare_mijloc_fix_adapter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/data_adaugare"
        android:layout_marginTop="7dp"
        android:layout_marginLeft="7dp"
        android:layout_marginEnd="7dp"
        android:layout_marginRight="7dp"
        android:textStyle="italic|bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_view_mijloc_fix_adapter"
        app:layout_constraintStart_toStartOf="parent"
        android:textAlignment="center"
        style="@style/OrangeText"
        android:gravity="center_horizontal" />




</androidx.constraintlayout.widget.ConstraintLayout>